After Module End

--- a/03_JS/Day_07_Objects/03_Object_Variable.html
+++ b/03_JS/Day_07_Objects/03_Object_Variable.html
@@ -39,7 +39,7 @@
 
             
             var content = `<div class="container" id = "5">
-                                <img src="car.jpg" alt="Car" class = "img">
+                                <img src="img/car.jpg" alt="Car" class = "img">
                                 <h3> Car ${i}</h3>
                             </div>`;
 
