--- a/03_JS/Day_09_XMLHttp_Request/02_Simulation.html
+++ b/03_JS/Day_09_XMLHttp_Request/02_Simulation.html
@@ -37,12 +37,12 @@
 
         var helperToServer = new XMLHttpRequest();
  
-        helperToServer.open("GET", "http://127.0.0.1:5500/02_items.json");
+        helperToServer.open("GET", "http://127.0.0.1:5500/03_JS/Day_09_XMLHttp_Request/02_items.json");
         // http://127.0.0.1:5500/items.json
 
         helperToServer.send();
 
-        debugger;
+        // debugger;
 
         helperToServer.onreadystatechange = () => {
 
