--- a/03_JS/Day_09_XMLHttp_Request/03_Local_Session_Storage.html
+++ b/03_JS/Day_09_XMLHttp_Request/03_Local_Session_Storage.html
@@ -26,15 +26,17 @@
             var name  = document.getElementById("txtName")
             var like = document.getElementById("txtLike");
 
-            localStorage.setItem("Name", name.value);
-            localStorage.setItem("Like", like.value)
+            // localStorage.setItem("Name", name.value);
+            // localStorage.setItem("Like", like.value)
 
             // localStorage.clear();
-            localStorage.removeItem("Name");
+            // localStorage.removeItem("CLikes");
 
             // sessionStorage.setItem("CName",name.value);
             // sessionStorage.setItem("CLikes",like.value);
 
+
+            window.location.href ="03_Local_Session_Second.html"
         }
     </script>
 </body>
