--- a/Project/02/index.html
+++ b/Project/02/index.html
@@ -45,7 +45,7 @@
         var uname = document.getElementById('username').value;
         var pass = document.getElementById('password').value;
 
-        if(uname == "sagar" && pass=="123"){
+        if(uname == "sagar" && pass==123){
             location.assign("file:////G:/C-Dac/4_WBT/ClassWork/Project/02/page.html")
         }
         else{
