--- a/Project/01/index.html
+++ b/Project/01/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
     <link rel="stylesheet" href="css.css">
-</head>
+</head
 
 <body>
 
@@ -17,7 +17,6 @@
                 <div class="brand-name">
                     <a href="index.html">Sagar</a>
                 </div>
-
                 <nav class="nav">
                     <ul>
                         <li><a href="#">Home</a></li>
